replace product on techcard. Add TrackingNotAddedProducts.cs
