# src/Application.Contracts/ProductCreating/ManufacturingOrders/ManufacturingOrderCompositions/NotAddedProductsModel.cs
@@ -1,11 +1,7 @@
 namespace Forpost.Application.Contracts.ProductCreating.ManufacturingOrders.ManufacturingOrderCompositions;
 
-public sealed class ManufacturingOrderCompositionModel
+public sealed class NotAddedProductsModel
 {
-    public Guid Id { get; set; }
-    public Guid ManufacturingProcessOrderId { get; set; }
-    public Guid TechCardId { get; set; }
-    public string TechCardNumber { get; set; }
     public Guid ProductId { get; set; }
     public string ProductName { get; set; }
     public int Quantity { get; set; }
